Push some deno fixes to fix the linting throws.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -22,35 +22,18 @@
 #mixins {
   .a() {
     :not(li.isactive)
-      > :is(
-        a:not(
-          .btn,
-          .btn-primary,
-          .accordion-button,
-          .btn-close,
-          .page-link,
-          .form-control,
-          .form-select,
-          .form-check-input,
-          .form-range
-        ),
-        a.permalink
+      > a:not(
+        .btn,
+        .btn-primary,
+        .accordion-button,
+        .btn-close,
+        .page-link,
+        .form-control,
+        .form-select,
+        .form-check-input,
+        .form-range
       ),
-    :not(li.isactive)
-      > :is(
-        a:not(
-          .btn,
-          .btn-primary,
-          .accordion-button,
-          .btn-close,
-          .page-link,
-          .form-control,
-          .form-select,
-          .form-check-input,
-          .form-range
-        ),
-        a.permalink
-      ):link {
+    :not(li.isactive) > a.permalink {
       color: @blue !important;
 
       &:hover {
@@ -67,6 +50,26 @@
 
       &.active {
         background-color: @surface0 !important;
+      }
+
+      &:link {
+        color: @blue !important;
+
+        &:hover {
+          color: @sky !important;
+        }
+
+        &:active, &:focus, &:focus-within {
+          color: @sapphire !important;
+        }
+
+        &:visited {
+          color: @lavender !important;
+        }
+
+        &.active {
+          background-color: @surface0 !important;
+        }
       }
     }
   }
@@ -2004,13 +2007,17 @@
       .Nm
     )
       > tbody
-      > :is(
-        tr:nth-child(1),
-        tr:nth-child(1):hover
-      ) {
+      > tr:nth-child(1) {
       background-color: @mantle !important;
       > td {
         background-color: @mantle !important;
+      }
+
+      &:hover {
+        background-color: @mantle !important;
+        > td {
+          background-color: @mantle !important;
+        }
       }
     }
 
@@ -2194,16 +2201,19 @@
       }
 
       // ADDRESS
-      .Ad {}
+      .Ad {
+        color: @subtext0 !important;
+      }
 
       // MANUAL SECTION
       .Ms {
-        font-style: normal;
-        font-weight: bold;
+        color: @text !important;
       }
 
       // STANDARD
-      .St {}
+      .St {
+        color: @peach !important;
+      }
 
       // LITERALLY WHENEVER UNIX OR UNIX DISTRO NAMES ARE USED!
       .Ux {
