Push fix for thead and th.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -237,7 +237,11 @@
       background-color: @mantle !important;
       border-color: @overlay0 !important;
 
-      > thead > tr > th {
+      thead * {
+        background-color: @mantle !important;
+      }
+
+      tr > th {
         color: @text !important;
         background-color: @mantle !important;
         border-color: @overlay0 !important;
