--- a/styles/github/catppuccin.user.less
+++ b/styles/github/catppuccin.user.less
@@ -462,6 +462,11 @@ regexp(
     --shadow-floating-legacy: 0px 6px 12px -3px @crust, 0px 6px 18px 0px @crust;
     --outline-focus: @blue solid 2px;
 
+    /* Feed Links */
+    .feed-item-content a tt {
+      color: @accent;
+    }
+
     /* Customer Terms & Agreements Page: https://github.com/customer-terms */
     .enterprise-customer-agreement {
       color: @text !important;
