fix(crunchyroll): style new footer

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -1357,22 +1357,39 @@
     // AUTH PAGES (CREATE ACCOUNT / LOGIN) - END
 
     // FOOTER - START
-    .erc-footer,
+    [class*="footer--"],
     .erc-redeem .minimal-footer-wrapper {
-      background: @base linear-gradient(180deg, #0000, fade(@accent, 10%));
-
-      .footer-top-wrapper {
-        border-bottom-color: @overlay0;
-      }
-
-      .erc-footer-section-item .as {
+      [class*="footer-nav-item__element--"] {
         .clickable-text-subtle();
       }
 
-      .erc-footer-copyright-section {
-        .footer-copyright {
+      [class*="footer-about-crunchyroll-section--"] {
+        &,
+        [class*="footer-copyright__copyright-text--"],
+        [class*="footer-about-crunchyroll--"] {
           color: @subtext0;
         }
+
+        [class*="footer-copyright__sony-logo--"] {
+          fill: @subtext0;
+        }
+
+        [class*="footer-social-icon__link--"] {
+          .clickable-text-subtle();
+        }
+
+        [class*="crunchyroll-logo--is-white--"]
+          [class*="crunchyroll-logo__icon--"] {
+          fill: @text;
+        }
+
+        [class*="crunchyroll-logo__icon--"] {
+          .clickable-fill(@accent);
+        }
+      }
+
+      img[class*="footer-horizontal-layout__image--"] {
+        display: none;
       }
     }
     // FOOTER - END
