--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -1309,19 +1309,11 @@
     .cx-app {
       background-color: @base;
 
-      [class*="Header_header__"] {
+      [class*="nav-horizontal-layout__content--"] {
         background-color: @mantle;
-
-        [class*="Header_logo__"] {
-          fill: @accent;
-        }
       }
 
       [class*="AuthForm_authForm__"] {
-        [class*="AuthForm_card__"] {
-          background-color: @surface0;
-        }
-
         a {
           .clickable-text-accent();
         }
@@ -1329,6 +1321,10 @@
         [class*="AuthForm_legalInfo__"] {
           color: @subtext0;
         }
+      }
+
+      [class*="Form_passwordStrengthMeter__"] {
+        color: @subtext0;
       }
 
       [class*="Footer_footer__"] {
@@ -1356,6 +1352,21 @@
     }
     // AUTH PAGES (CREATE ACCOUNT / LOGIN) - END
 
+    // CRUNCHYROLL LOGO - START
+    [class*="crunchyroll-logo__icon--"] {
+      fill: @accent;
+    }
+    [class*="crunchyroll-logo--is-white--"]
+      [class*="crunchyroll-logo__icon--"] {
+      fill: @text;
+    }
+
+    [class*="crunchyroll-logo--is-actionable--"]
+      [class*="crunchyroll-logo__icon--"] {
+      .clickable-fill(@accent-dim);
+    }
+    // CRUNCHYROLL LOGO - END
+
     // FOOTER - START
     [class*="footer--"],
     .erc-redeem .minimal-footer-wrapper {
@@ -1376,15 +1387,6 @@
 
         [class*="footer-social-icon__link--"] {
           .clickable-text-subtle();
-        }
-
-        [class*="crunchyroll-logo--is-white--"]
-          [class*="crunchyroll-logo__icon--"] {
-          fill: @text;
-        }
-
-        [class*="crunchyroll-logo__icon--"] {
-          .clickable-fill(@accent);
         }
       }
 
@@ -1702,6 +1704,7 @@
       }
 
       &[class*="button--is-disabled--"] {
+        background-color: initial;
         color: @overlay0;
       }
     }
@@ -1811,55 +1814,22 @@
     // DROPDOWN - END
 
     // BASIC INPUT - START
-    [class*="basic-input--"] {
-      [class*="input--"] {
-        color: @text;
-      }
+    [class*="input--"] {
+      color: @text;
+    }
 
-      [class*="clear-input__clear-action--"] {
-        background-color: @overlay0;
+    [class*="clear-input__clear-action--"] {
+      background-color: @overlay0;
 
-        [class*="clear-input__icon--"] {
-          fill: @text;
-        }
+      [class*="clear-input__icon--"] {
+        fill: @text;
       }
+    }
 
-      [class*="password-input__button--"] {
-        .clickable-text-subtle();
-      }
+    [class*="password-input__button--"] {
+      .clickable-text-subtle();
     }
     // BASIC INPUT - END
-
-    // STRENGTH METER - START
-    .password-strength-meter, // ACCOUNT SETTINGS
-    [class*="PasswordStrengthMeter_strengthMeter__"] // CREATE ACCOUNT
-    {
-      .strength-meter-label,
-      [class*="PasswordStrengthMeter_label__"] {
-        color: @subtext0;
-
-        &.status-label-error,
-        &[class*="PasswordStrengthMeter_error__"] {
-          color: @red;
-        }
-      }
-
-      .strength-meter-tile,
-      [class*="PasswordStrengthMeter_tile__"] {
-        background-color: @overlay0;
-      }
-
-      .status-tile-success,
-      [class*="PasswordStrengthMeter_tileSuccess__"] {
-        background-color: @green;
-      }
-
-      .status-tile-weak,
-      [class*="PasswordStrengthMeter_tileWeak__"] {
-        background-color: @subtext0;
-      }
-    }
-    // STRENGTH METER - END
 
     // CHECKBOX - START
     [class*="checkbox--"] {
