fix(crunchyroll): include odd / blue editorial

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -519,7 +519,8 @@
       /* NEWS AND EDITORIAL SECTION - START */
       [class*="news-and-editorial--"] {
         [class*="news-and-editorial-background--"] {
-          &[class*="news-and-editorial-background--is-even--"] {
+          &[class*="news-and-editorial-background--is-even--"],
+          &[class*="news-and-editorial-background--is-odd--"] {
             background-image: linear-gradient(
               180deg,
               spin(@accent, 20),
@@ -528,7 +529,8 @@
           }
 
           svg[class*="news-and-editorial-background__illustration--"] {
-            #news-and-editorial-orange-a {
+            #news-and-editorial-orange-a,
+            #news-and-editorial-blue-a {
               stop[offset="0"] {
                 stop-color: spin(@accent, 20);
               }
@@ -546,7 +548,8 @@
               }
             }
 
-            #news-and-editorial-orange-b {
+            #news-and-editorial-orange-b,
+            #news-and-editorial-blue-b {
               stop[offset="0"] {
                 stop-color: spin(@accent, 20);
               }
