--- a/styles/komodo/catppuccin.user.less
+++ b/styles/komodo/catppuccin.user.less
@@ -30,30 +30,30 @@
     #lib.palette();
     #lib.defaults();
 
-    --background: #lib.hslify(@base) [];
-    --foreground: #lib.hslify(@text) [];
-    --card: #lib.hslify(@base) [];
-    --card-foreground: #lib.hslify(@text) [];
-    --popover: #lib.hslify(@base) [];
-    --popover-foreground: #lib.hslify(@text) [];
-    --primary: #lib.hslify(@text) [];
-    --primary-foreground: #lib.hslify(@base) [];
-    --secondary: #lib.hslify(@surface0) [];
-    --secondary-foreground: #lib.hslify(@text) [];
-    --muted: #lib.hslify(@mantle) [];
-    --muted-foreground: #lib.hslify(@subtext0) [];
-    --accent: #lib.hslify(@crust) [];
-    --accent-foreground: #lib.hslify(@text) [];
-    --destructive: #lib.hslify(@red) [];
-    --destructive-foreground: #lib.hslify(@base) [];
-    --border: #lib.hslify(@surface0) [];
-    --input: #lib.hslify(@surface1) [];
-    --ring: #lib.hslify(@overlay0) [];
-    --chart-1: #lib.hslify(@red) [];
-    --chart-2: #lib.hslify(@green) [];
-    --chart-3: #lib.hslify(@yellow) [];
-    --chart-4: #lib.hslify(@blue) [];
-    --chart-5: #lib.hslify(@pink) [];
+    --background: .hslifyNoCommas(@base) [];
+    --foreground: .hslifyNoCommas(@text) [];
+    --card: .hslifyNoCommas(@base) [];
+    --card-foreground: .hslifyNoCommas(@text) [];
+    --popover: .hslifyNoCommas(@base) [];
+    --popover-foreground: .hslifyNoCommas(@text) [];
+    --primary: .hslifyNoCommas(@text) [];
+    --primary-foreground: .hslifyNoCommas(@base) [];
+    --secondary: .hslifyNoCommas(@surface0) [];
+    --secondary-foreground: .hslifyNoCommas(@text) [];
+    --muted: .hslifyNoCommas(@mantle) [];
+    --muted-foreground: .hslifyNoCommas(@subtext0) [];
+    --accent: .hslifyNoCommas(@crust) [];
+    --accent-foreground: .hslifyNoCommas(@text) [];
+    --destructive: .hslifyNoCommas(@red) [];
+    --destructive-foreground: .hslifyNoCommas(@base) [];
+    --border: .hslifyNoCommas(@surface0) [];
+    --input: .hslifyNoCommas(@surface1) [];
+    --ring: .hslifyNoCommas(@overlay0) [];
+    --chart-1: .hslifyNoCommas(@red) [];
+    --chart-2: .hslifyNoCommas(@green) [];
+    --chart-3: .hslifyNoCommas(@yellow) [];
+    --chart-4: .hslifyNoCommas(@blue) [];
+    --chart-5: .hslifyNoCommas(@pink) [];
 
     .bg-accent\/50,
     .bg-accent\/75,
@@ -103,5 +103,11 @@
     #--tailwind-color(@yellow, yellow, "EAB308", "234, 179, 8");
     #--tailwind-color(@blue, blue, "3B82F6", "59, 130, 246");
     #--tailwind-color(@mauve, purple, "A855F7", "168, 85, 247");
+  }
+  
+  .hslifyNoCommas(@color) {
+    @raw: e(
+      %("%s %s% %s%", hue(@color), saturation(@color), lightness(@color))
+    );
   }
 }
