--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -896,25 +896,23 @@
 
     // SEARCH PAGE - START
     .erc-search-page {
-      // SEARCH FIELD - START
       .search-field-wrapper {
         background-color: @base;
 
-        .erc-search-field .search-input-wrapper {
-          border-bottom-color: @overlay0;
+        [class*="search-field__wrapper--"] {
+          border-color: @overlay0;
 
-          &.state-focused {
-            border-bottom-color: @accent;
+          &:focus-within {
+            border-color: @accent;
           }
 
-          .search-input {
-            color: @text;
+          [class*=".clear-button--DZHDj"] {
+            .clickable-text-subtle();
           }
         }
       }
-      // SEARCH FIELD - END
 
-      .erc-search-results-back-button {
+      .erc-recent-searches .clear-button {
         .clickable-text-subtle();
       }
     }
@@ -1819,6 +1817,10 @@
     // BASIC INPUT - START
     [class*="input--"] {
       color: @text;
+
+      &::placeholder {
+        color: @subtext0;
+      }
     }
 
     [class*="clear-input__clear-action--"] {
@@ -2190,7 +2192,8 @@
     [class*="badge--"] {
       background-color: @accent;
 
-      [class*="badge__text-wrapper--"] {
+      [class*="badge__text-wrapper--"],
+      [class*="badge__close-icon-wrapper--QKRtV"] {
         &[class*="badge__text-wrapper--is-link--"] {
           border-right-color: @accent-dim;
         }
@@ -2200,6 +2203,10 @@
 
       [class*="badge__text--"] {
         color: @base;
+      }
+
+      [class*="badge__close-icon--"] {
+        fill: @base;
       }
     }
     // BADGE - END
