fix(crunchyroll): changes on account pages

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -994,6 +994,24 @@
                 color: @yellow;
               }
 
+              [data-t="expandable-perks"] {
+                [class*="perk--"] {
+                  color: @text;
+
+                  [class*="perk-icon--"] {
+                    fill: @yellow;
+                  }
+
+                  [class*="perk-text--"] span {
+                    color: @yellow;
+                  }
+                }
+              }
+
+              [data-t="expandable-btn"] {
+                color: @text;
+              }
+
               .price-wrapper {
                 color: @text;
 
@@ -1008,6 +1026,12 @@
 
               .premium-cta {
                 .clickable-text-subtle();
+              }
+
+              .erc-manage-payment-method {
+                .line {
+                  border-color: @overlay0;
+                }
               }
             }
           }
@@ -1028,8 +1052,15 @@
             color: @subtext0;
           }
 
-          .erc-maturity-restrictions-faq .faq-link {
+          .erc-maturity-restrictions-faq .faq-link,
+          .highlighted-link {
             .clickable-text-accent();
+          }
+        }
+
+        .erc-profile-pin {
+          .profile-pin-description {
+            color: @subtext0;
           }
         }
 
@@ -1138,6 +1169,10 @@
 
           [class*="alert-info--"] {
             color: @text;
+          }
+
+          .page-action-link {
+            .clickable-text-accent();
           }
         }
       }
@@ -1694,7 +1729,8 @@
       }
 
       &[class*="button--is-type-one--"],
-      &[class*="button--is-type-four--"] {
+      &[class*="button--is-type-four--"],
+      &[class*="button--is-type-five--"] {
         .clickable-background-accent();
         color: @base;
       }
@@ -2262,7 +2298,7 @@
     color: @text;
 
     a {
-      .clickable-text(@text);
+      .clickable-text-accent();
     }
 
     ::selection {
