feat(crunchyroll): profile selection, edit etc

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -918,6 +918,106 @@
     }
     // SEARCH PAGE - END
 
+    // PROFILE SELECTION / EDIT PAGE - START
+    .erc-multiple-profiles-layout {
+      .erc-multiple-profiles-layout-background::after {
+        background-color: @base;
+      }
+
+      .erc-profile-item,
+      .erc-profile-add-button {
+        color: @subtext0;
+        --avatar-outline-color: @overlay0;
+
+        .clickable-text(@text);
+        .clickable(--avatar-outline-color, @text);
+
+        &::before {
+          background-color: @mantle;
+        }
+
+        [class*="avatar__corner-icon--neutral--"] {
+          background-color: @subtext0;
+          fill: @base;
+          box-shadow: 0 0 0 0.125rem @base;
+        }
+      }
+
+      .erc-profile-add-button .profile-add-button-header {
+        background-color: @base;
+      }
+
+      .logout-link {
+        .clickable-text-subtle();
+      }
+    }
+    // PROFILE SELECTION / EDIT PAGE - END
+
+    // PROFILE SELECTION FORM - START
+    .erc-profile-form {
+      .form-body {
+        background-color: @mantle;
+      }
+
+      .erc-profile-form-wallpaper {
+        .edit-label-wrapper {
+          background-color: fade(@base, 40%);
+
+          .wallpaper-edit-label {
+            background-color: fade(@base, 70%);
+            color: @text;
+          }
+        }
+
+        .wallpaper-edit-icon-wrapper {
+          background-color: @subtext0;
+          fill: @base;
+        }
+
+        &:hover, &:focus {
+          .wallpaper-edit-icon-wrapper {
+            background-color: @text;
+          }
+        }
+      }
+
+      .avatar-edit-label-wrapper {
+        background-color: fade(@base, 40%);
+
+        .avatar-edit-label {
+          background-color: fade(@base, 70%);
+          color: @text;
+        }
+      }
+
+      .profile-avatar {
+        .avatar-edit-icon-wrapper {
+          background-color: @subtext0;
+          fill: @base;
+          box-shadow: 0 0 0 0.125rem @base;
+        }
+
+        &:focus, &:hover {
+          .avatar-edit-icon-wrapper {
+            background-color: @text;
+          }
+        }
+      }
+
+      [class*="username-input__button--"] {
+        .clickable-text-subtle();
+      }
+
+      .input-description {
+        color: @subtext0;
+      }
+
+      .faq-link {
+        .clickable-text-accent();
+      }
+    }
+    // PROFILE SELECTION FORM - END
+
     // CRUNCHYLISTS PAGE - START
     .erc-empty-list-info-box {
       border-color: @overlay2;
@@ -2393,7 +2493,9 @@
     }
 
     [class*="content-image__figure-sizer--is-background-type-one--"],
-    [class*="content-image__figure-sizer--is-background-type-two--"] {
+    [class*="content-image__figure-sizer--is-background-type-two--"],
+    [class*="content-image--is-background-type-one--"],
+    [class*="content-image--is-background-type-two--"] {
       background-color: @overlay0;
     }
 
