fix(crunchyroll): support new dialog element

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -2097,15 +2097,16 @@
       }
     }
 
-    // MODAL - START
-    .erc-modal {
-      .close-button {
+    // DIALOG - START
+    [class*="dialog--"] {
+      [class*="dialog__close-icon--"] {
         fill: @text;
       }
 
-      .content {
-        background-color: @base;
+      [class*="dialog__body--"] {
         color: @text;
+        background-color: @mantle;
+        box-shadow: 0 0 1rem 0 fade(@mantle, 70.2%);
 
         .erc-episode-list-modal,
         .erc-music-list-modal {
@@ -2125,13 +2126,11 @@
         }
       }
 
-      @media (min-width: 50em) {
-        .overlay {
-          background-color: fade(@base, 50%);
-        }
+      &::backdrop {
+        background-color: fade(@base, 50%);
       }
     }
-    // MODAL - END
+    // DIALOG - END
 
     // FLASH MESSAGE - START
     [class*="flash-message--"] {
