fix(crunchyroll): change avatar modal

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -2129,6 +2129,43 @@
       &::backdrop {
         background-color: fade(@base, 50%);
       }
+
+      &.erc-change-avatar-modal {
+        [class*="modal__adaptive-header--"] {
+          background-color: @surface0;
+        }
+
+        .modal-header-description {
+          color: @subtext0;
+        }
+
+        [class*="modal__adaptive-body-faders--"] {
+          &::before {
+            background-image: linear-gradient(180deg, @mantle, #0000);
+          }
+
+          &::after {
+            background-image: linear-gradient(0deg, @mantle, #0000);
+          }
+        }
+
+        .modal-avatars-group-title {
+          color: @text;
+        }
+
+        .erc-avatars-carousel {
+          .carousel-arrow-icon {
+            fill: @text;
+          }
+          .carousel-arrow-button {
+            .clickable-background(fade(@overlay0, 50%));
+          }
+
+          .avatar-option {
+            --hover-colors: @text;
+          }
+        }
+      }
     }
     // DIALOG - END
 
