fix(crunchyroll): user menu fade

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -318,6 +318,14 @@
 
             [class*="user-menu-section--is-sticky--"] {
               background-color: @crust;
+
+              &::before {
+                background-image: linear-gradient(
+                  180deg,
+                  fade(@mantle, 0%),
+                  @mantle
+                );
+              }
             }
 
             [class*="user-menu-section--has-delimiter--"] {
