fix: apply to code tags too
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/github/catppuccin.user.less
+++ b/styles/github/catppuccin.user.less
@@ -463,7 +463,7 @@ regexp(
     --outline-focus: @blue solid 2px;
 
     /* Feed Links */
-    .feed-item-content a tt {
+    .feed-item-content a code, .feed-item-content a tt {
       color: @accent;
     }
 
