fix(crunchyroll): correct carousel arrow background

--- a/styles/crunchyroll/catppuccin.user.less
+++ b/styles/crunchyroll/catppuccin.user.less
@@ -2195,12 +2195,17 @@
     [class*="carousel--"] {
       [class*="cards-carousel__arrow-wrapper--"] {
         [class*="cards-carousel__arrow--"] {
-          background-color: @surface0;
-          color: @text;
-
-          @media (min-width: 35.5em) {
-            .clickable-background(initial, @surface0);
-          }
+          .clickable-text-subtle();
+          .clickable-background(fade(@base, 70.2%));
+          .clickable(
+            background-image,
+            linear-gradient(
+              var(--gradient-dir),
+              #0000,
+              fade(@base, 50.2%) calc(var(--arrow-width) / 2),
+              fade(@base, 70.2%)
+            ),
+          );
         }
       }
 
