fix(upcloud): modals

--- a/styles/upcloud/catppuccin.user.less
+++ b/styles/upcloud/catppuccin.user.less
@@ -241,14 +241,13 @@
     }
 
     /* modals */
-    // Only apply transition/animation for modal cards
-    .Phoenix--Modal {
-      opacity: 0;
-    }
-
     .Phoenix__CardHead {
       color: @text !important;
       border-bottom: 0.5px solid @surface0 !important;
+    }
+
+    .Phoenix--Modal__content .Phoenix__Card {
+      box-shadow: none;
     }
 
     .Phoenix__Card {
