feat: some theming

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -149,6 +149,31 @@
       color: @green;
     }
 
+    .react-datepicker {
+      background-color: @base;
+      color: @text ;
+      border-color: @surface0;
+    }
+
+    .react-datepicker-popper .react-datepicker__triangle {
+      stroke: @surface0;
+    }
+
+    .react-datepicker-popper[data-placement^=bottom] .react-datepicker__triangle {
+      fill: @base;
+      color: @base;
+    }
+
+    .react-datepicker-popper[data-placement^=top] .react-datepicker__triangle {
+      fill: @base;
+      color: @base;
+    }
+
+    .react-datepicker__header {
+      background-color: @mantle;
+      border-bottom-color: @surface0;
+    }
+
     button[class*="text-white"], li[class*="text-white"] {
       color: @base;
     }
@@ -167,6 +192,15 @@
 
     .text-brand-primary-700 {
       color: @mauve;
+    }
+
+    .text-\[\#d90000\] {
+      color: @red;
+    }
+
+    [class*="css-"][class*="-control"], [class*="css-"][class*="placeholder"], .react-datepicker__input-container {
+      background-color: @mantle;
+      color: @text !important;
     }
 
     svg g[stroke="#fff"], svg line[stroke="#fff"], svg path[stroke="#fff"] {
