--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -159,12 +159,12 @@
       stroke: @surface0;
     }
 
-    .react-datepicker-popper[data-placement^=bottom] .react-datepicker__triangle {
+    .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle {
       fill: @base;
       color: @base;
     }
 
-    .react-datepicker-popper[data-placement^=top] .react-datepicker__triangle {
+    .react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle {
       fill: @base;
       color: @base;
     }
