feat: theme horizon education logo

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -198,6 +198,14 @@
       color: @red;
     }
 
+    .cls-1 {
+      fill: @lavender;
+    }
+
+    .cls-2 {
+      fill: @peach;
+    }
+
     [class*="css-"][class*="-control"], [class*="css-"][class*="placeholder"], .react-datepicker__input-container {
       background-color: @mantle;
       color: @text !important;
