feat: theme schoology

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -190,7 +190,7 @@
       color: @base;
     }
 
-    .text-brand-primary-700 {
+    .text-brand-primary-700, .text-brand-primary-900 {
       color: @mauve;
     }
 
@@ -204,6 +204,23 @@
 
     .cls-2 {
       fill: @peach;
+    }
+
+
+    .clss-1 {
+      fill: @text;
+    }
+
+    .clss-4 {
+      isolation: isolate;
+    }
+
+    .clss-2 {
+      fill: @blue;
+    }
+
+    .clss-3 {
+      fill: @base;
     }
 
     [class*="css-"][class*="-control"], [class*="css-"][class*="placeholder"], .react-datepicker__input-container {
