feat: a lot of theming

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -46,6 +46,10 @@
       background-color: @mantle;
     }
 
+    .bg-neutral-100 {
+      background-color: @base;
+    }
+
     .bg-brand-secondary-600 {
       background-color: @base;
     }
@@ -125,6 +129,10 @@
       color: @text;
     }
 
+    button[class*="text-white"] {
+      color: @base !important;
+    }
+
     .text-white, .text-gray-600, .text-gray-700, .text-gray-800, .text-gray-900, .lrn, .text-base, .text-site-black {
       color: @text !important;
     }
@@ -135,6 +143,14 @@
 
     .text-black-333 {
       color: @subtext0;
+    }
+
+    .text-black {
+      color: @text;
+    }
+
+    [multiple], [type="date"], [type="datetime-local"], [type="email"], [type="month"], [type="number"], [type="password"], [type="search"], [type="tel"], [type="text"], [type="time"], [type="url"], [type="week"], select, textarea {
+      background-color: @mantle;
     }
 
     footer [class*="text-white"], #ribbon[class*="text-white"], button[class*="text-gray-600"]:hover {
@@ -223,6 +239,10 @@
       fill: @base;
     }
 
+    .bg-clever-blue {
+      background-color: @blue;
+    }
+
     [class*="css-"][class*="-control"], [class*="css-"][class*="placeholder"], .react-datepicker__input-container {
       background-color: @mantle;
       color: @text !important;
@@ -238,6 +258,26 @@
 
     path[fill="#0494bc"], path[fill="#04749c"], path[fill="#047c9c"] {
       fill: @blue;
+    }
+
+    path[fill="#EA4335"] {
+      fill: @red;
+    }
+
+    path[fill="#FBBC05"] {
+      fill: @yellow;
+    }
+
+    path[fill="#34A853"] {
+      fill: @green;
+    }
+
+    path[fill="#4285F4"] {
+      fill: @blue;
+    }
+
+    svg#canvas-icon path {
+      color: @red;
     }
   }
 }
