feat: more theming

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -210,6 +210,10 @@
       color: @mauve;
     }
 
+    th[class*="text-base"], th[class*="text-base"] {
+      color: @base !important;
+    }
+
     .text-\[\#d90000\] {
       color: @red;
     }
@@ -241,6 +245,14 @@
 
     .bg-clever-blue {
       background-color: @blue;
+    }
+
+    .bg-\[\#E6252A\] {
+      background-color: @red;
+    }
+
+    button span[class*="text-white"] {
+      color: @base !important;
     }
 
     [class*="css-"][class*="-control"], [class*="css-"][class*="placeholder"], .react-datepicker__input-container {
