fix: remove duplicate

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -210,7 +210,7 @@
       color: @mauve;
     }
 
-    th[class*="text-base"], th[class*="text-base"] {
+    th[class*="text-base"] {
       color: @base !important;
     }
 
