feat: more theming

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -154,7 +154,7 @@
     }
 
     footer [class*="text-white"], #ribbon[class*="text-white"], button[class*="text-gray-600"]:hover {
-      color: @base !important;
+      color: @base;
     }
 
     .text-gray-500 {
@@ -163,6 +163,26 @@
 
     .text-green-600 {
       color: @green;
+    }
+
+    .text-red-500 {
+      color: @red !important;
+    }
+
+    .hover\:text-red-500:hover {
+      color: @red !important;
+    }
+
+    .border-red-500 {
+      border-color: @red !important;
+    }
+
+    .hover\:border-gray-500:hover {
+      border-color: @surface0 !important;
+    }
+
+    .border-orange-light {
+      border-color: @yellow !important;
     }
 
     .react-datepicker {
@@ -225,7 +245,6 @@
     .cls-2 {
       fill: @peach;
     }
-
 
     .clss-1 {
       fill: @text;
