feat: fix some theming

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -153,8 +153,16 @@
       background-color: @mantle;
     }
 
-    footer [class*="text-white"], #ribbon[class*="text-white"], button[class*="text-gray-600"]:hover {
+    footer [class*="text-white"], #ribbon[class*="text-white"] {
+      color: @base !important;
+    }
+
+    button[class*="text-gray-600"]:hover {
       color: @base;
+    }
+
+    .text-brand-primary-300 {
+      color: @pink;
     }
 
     .text-gray-500 {
