--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -54,6 +54,10 @@
       background-color: @base;
     }
 
+    button[class*="bg-brand-secondary-600"] {
+      background-color: darken(@blue, 5%);
+    }
+
     .bg-blues {
       background-color: @blue;
     }
@@ -137,6 +141,14 @@
       color: @text !important;
     }
 
+    .text-gray-600:hover {
+      color: @base !important;
+    }
+
+    group-hover\:text-gray-700 {
+      color: @green;
+    }
+
     .hover\:text-gray-100 {
       color: @base !important;
     }
@@ -161,11 +173,19 @@
       color: @base;
     }
 
+    .focus\:ring-brand-primary:focus {
+      --tw-ring-color: @mauve !important;
+    }
+
     .text-brand-primary-300 {
       color: @pink;
     }
 
     .text-gray-500 {
+      color: @subtext1;
+    }
+
+    .text-gray-500:hover, .group-hover\:text-gray-700 {
       color: @subtext0;
     }
 
