Push bootstrap import, needs changing when bs lib gets made. Need to make a pf lib too.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -2250,6 +2250,8 @@
 
 /// Arch Mailing Lists
 @-moz-document url-prefix("https://lists.archlinux.org") {
+  @import "https://raw.githubusercontent.com/catppuccin/userstyles/refs/heads/main/styles/namemc/catppuccin.user.less";
+
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -2264,48 +2266,6 @@
     #lib.palette();
     #lib.defaults();
     #lib.css-variables();
-
-    --bs-blue: @blue;
-    --bs-indigo: @lavender;
-    --bs-purple: @mauve;
-    --bs-pink: @pink;
-    --bs-red: @red;
-    --bs-orange: @peach;
-    --bs-yellow: @yellow;
-    --bs-green: @green;
-    --bs-teal: @teal;
-    --bs-cyan: @sky;
-    --bs-white: @text;
-    --bs-black: @crust;
-    --bs-gray: @subtext1;
-    --bs-gray-dark: @subtext0;
-    --bs-primary: @accent;
-    --bs-secondary: @surface0;
-    --bs-success: @green;
-    --bs-info: @teal;
-    --bs-warning: @peach;
-    --bs-danger: @red;
-    --bs-light: @subtext1;
-    --bs-dark: @mantle;
-    --bs-primary-rgb: #lib.rgbify(@accent);
-    --bs-secondary-rgb: #lib.rgbify(@surface0);
-    --bs-success-rgb: #lib.rgbify(@green);
-    --bs-info-rgb: #lib.rgbify(@teal);
-    --bs-warning-rgb: #lib.rgbify(@peach);
-    --bs-danger-rgb: #lib.rgbify(@red);
-    --bs-light-rgb: #lib.rgbify(@subtext1);
-    --bs-dark-rgb: #lib.rgbify(@mantle);
-    --bs-white-rgb: #lib.rgbify(@text);
-    --bs-black-rgb: #lib.rgbify(@crust);
-    --bs-body-color-rgb: #lib.rgbify(@text);
-    --bs-body-bg-rgb: #lib.rgbify(@base);
-    --bs-gradient: linear-gradient(
-      180deg,
-      fade(@base, 0%),
-      fade(@text, 0%)
-    );
-    --bs-body-color: @text;
-    --bs-body-bg: @base;
 
     .table, [class*="table"] {
       --bs-table-bg: @mantle;
@@ -2437,5 +2397,24 @@
     .all-lists table.lists tr.list:hover {
       color: inherit;
     }
+  }
+}
+
+/// Arch Account Management
+@-moz-document url-prefix("https://accounts.archlinux.org") {
+  :where(:root) {
+    #catppuccin(@lightFlavor);
+  }
+
+  :where(.pf-v5-theme-dark) {
+    #catppuccin(@darkFlavor);
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    // Define a patternfly library, include it here.
   }
 }
