fix(youtube): video hover preview progress bars

--- a/styles/youtube/catppuccin.user.less
+++ b/styles/youtube/catppuccin.user.less
@@ -908,6 +908,19 @@
 
     /* Video player */
 
+    // Shorts and video hover preview progress bars
+    yt-progress-bar {
+      .ytProgressBarLineProgressBarPlayed,
+      .ytProgressBarPlayheadProgressBarPlayheadDot {
+        background: @accent;
+      }
+
+      .ytProgressBarLineProgressBarHovered,
+      .ytProgressBarLineProgressBarBackground {
+        background: @text; // (background) opacity is already adequately set
+      }
+    }
+
     .ytp-cards-button {
       .ytp-cards-button-icon {
         use {
@@ -1046,11 +1059,6 @@
       .YtdDesktopShortsVolumeControlsBackgroundScrim {
         background-color: fade(@black, 60%);
         color: @white;
-      }
-
-      .YtProgressBarLineProgressBarPlayed,
-      .YtProgressBarPlayheadProgressBarPlayheadDot {
-        background-color: @accent;
       }
 
       .yt-spec-button-shape-next--overlay-dark.yt-spec-button-shape-next--filled {
